--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="utf-8" />
     <title>dolgozat</title>
+    <link href="style.css" rel="stylesheet" />
 </head>
 <body>
-    <table border="1">
+    <table class="tbl" border="1">
         <tr>
             <th colspan="9">xy</th>
 
         </tr>
         <tr>
-            <td>Menü</td>
+            <td class="menu">Menü</td>
             <td colspan="8" rowspan="9">A nevem xy, xy éves vagyok, azért járok xyra mivel érdekel, és szeretnék ebben elhelyezkedni.</td>
 
         </tr>
