--- a/listak.html
+++ b/listak.html
@@ -3,16 +3,17 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Listák</title>
+    <link href="style.css" rel="stylesheet" />
 </head>
 <body>
-    <table border="1">
+    <table class="tbl" border="1">
         <tr>
             <th colspan="9">xy</th>
 
         </tr>
         <tr>
-            <td>Menü</td>
+            <td class="menu">Menü</td>
 
         </tr>
         <tr>
