--- a/belsolink.html
+++ b/belsolink.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="utf-8" />
     <title>Belső link</title>
+    <link href="style.css" rel="stylesheet" />
 </head>
 <body>
-    <table border="1">
+    <table class="tbl" border="1">
         <tr>
             <th colspan="9">xy</th>
 
         </tr>
         <tr>
-            <td>Menü</td>
+            <td class="menu">Menü</td>
 
         </tr>
         <tr>
