--- a/osszevonasok.html
+++ b/osszevonasok.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <title>Összevonások</title>
+    <link href="style.css" rel="stylesheet" />
 </head>
 <body>
-    <table border="1">
+    <table class="tbl" border="1">
         <tr>
             <th colspan="9">xy</th>
 
